--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -15,7 +15,7 @@
           <% for (let product of prods ) { %>
             <article class="card product-item">
                 <header class="card__header">
-                    <h1 class="product__title"> <%= product.title %> </h1>
+                    <h1 class="product__title"> <%= product.title %> --- <%= product.id %> </h1>
                 </header>
                 <div class="card__image">
                     <img src="<%= product.imageurl %>">
@@ -25,7 +25,8 @@
                     <p class="product__description"> <%= product.description %></p>
                 </div>
                 <div class="card__actions">
-                    <button class="btn">Add to Cart</button>
+                   <a href="/products/<%= product.id %>" class="btn"> Details </a>
+                   <%- include('../include/add-to-cart.ejs' , {product : product }) %>
                 </div>
             </article>
 
