--- a/views/admin/product-list-admin.ejs
+++ b/views/admin/product-list-admin.ejs
@@ -1,5 +1,51 @@
-<%- include('../include/head.ejs')%>
+<%- include('../include/head.ejs') %>
+</head>
 
-<%- include('../include/navigation.ejs')%>
+<body>
+   
+   <%- include('../include/navigation.ejs') %>
 
-<%- include('../include/end.ejs')%>
+    <main>
+        
+
+        <% if (prods.length > 0) { %>
+        <div class="grid">
+
+          <% for (let product of prods ) { %>
+            <article class="card product-item">
+                <header class="card__header">
+                    <h1 class="product__title"> <%= product.title %> --- <%= product.id %> </h1>
+                </header>
+                <div class="card__image">
+                    <img src="<%= product.imageurl %>">
+                </div>
+                <div class="card__content">
+                    <h2 class="product__price">$<%= product.price %></h2>
+                    <p class="product__description"> <%= product.description %></p>
+                </div>
+                <div class="card__actions">
+                   <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn"> Edit </a>
+                   
+                   <form action="/admin/delete-product" method='POST'>
+                    
+                    <input type="hidden" value="<%= product.id %>" name="prodid">
+
+                    <button type="submit" class="btn"> delete </button>
+                       
+                   </form>
+                </div>
+            </article>
+
+            <% } %>
+
+        </div>
+
+        <% } else { %>
+
+         <h2> NO PRODUCTS FOUND !  </h2>
+
+        <% } %>
+
+    </main>
+
+<%- include('../include/end.ejs') %>
