--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,5 +1,63 @@
 <%- include('../include/head.ejs')%>
 
+</head>
+
+<body>
+
 <%- include('../include/navigation.ejs')%>
+
+<main>
+
+<% if ( products.length > 0 ) { %>
+
+ <div style="display : flex;"> 
+
+ <% for (p of products) { %>
+  
+    <div style="display: flex; justify-content: center; width: 100%;">
+  
+       <article class="card product-item">
+                <header class="card__header">
+                    <h1 class="product__title"> <%= p.product.title %> --- <%= p.product.id %> </h1>
+                </header>
+                <div class="card__image">
+                    <img src="<%= p.product.imageurl %>">
+                </div>
+                <div class="card__content">
+                    <h2 class="product__price">$<%= p.product.price %></h2>
+                    <p class="product__description"> <%= p.product.description %></p>
+                 
+                  <form action="/cart-delete-item" method="POST">
+
+                  <input type="hidden" name="prid" value="<%= p.product.id %>">
+                  <button type="submit" class="btn"> Delete </button>
+
+                  </form>
+
+                </div>
+      
+      
+            </article>
+
+
+    </div>
+
+        
+      
+      <% } %>
+ 
+ </div>
+ 
+  
+
+
+
+<% } else {%>
+
+<h1> No products is cart !!!! </h1>
+
+<% } %>
+
+</main>
 
 <%- include('../include/end.ejs')%>
