--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -10,34 +10,25 @@
 
 <main>
 
-  <% if (errormessage) { %>
+<% if (errormessage) { %>
    
     <div class="user-message user-message--error"> <%= errormessage %> </div>
    
   <% } %>
 
-<form class="login-form" action="/login" method="POST">
+<form class="login-form" action="/reset" method="POST">
             <div class="form-control">
                 <label for="email"> Email </label>
-                <input type="text" name="email" id="email" required>
-            </div>
-
-
-             <div class="form-control">
-                <label for="pass"> password </label>
-                <input type="password" name="password" id="pass"  required>
+                <input type="text" name="email" id="email" >
             </div>
 
             <input type="hidden" name="_csrf" value="<%= csrftoken %>">
  
   <button type="submit" class="btn">
-   Login 
+   Reset password
   </button>
-  
 </form>
 
-
-  <div class="login-form" style="margin-top : 20px;"> <a href="/reset"> <button class="btn"> reset password </button> </a> </div>
 
 
 
